--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"
     />
     <title>ODC.ME Dashboard</title>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/media/logos/favicon.ico" />
+    <link rel="shortcut icon" type="icon/png"  href="%PUBLIC_URL%/media/logos/logo.png" />
     <link rel="stylesheet" id="layout-styles-anchor" href="%PUBLIC_URL%/splash-screen.css" />
     <link rel="manifest" href="/manifest.json" />
 
