--- a/public/offline.html
+++ b/public/offline.html
@@ -46,7 +46,9 @@
         <div class="text-container">
 
                 <h1>ODC</h1>
-                <h2>Please go online to use the application..</h2>
+                <h2>Please go online to use the application</h2>
+                <a href="/dashboard">refresh</a>
+
         
         </div>
     </body>
